@@ -212,5 +212,3 @@ TCP_FLAGS_DISPOSITION=DROP
 ################################################################################
 
 IPSECFILE=zones
-
-#LAST LINE -- DO NOT REMOVE
