@@ -397,6 +397,8 @@ compiler() {
     [ "$g_debugging" = trace ] && options="$options --debug"
     [ -n "$g_refreshchains" ] && options="$options --refresh=$g_refreshchains"
     [ -n "$g_confess" ] && options="$options --confess"
+    [ -n "$g_upgrade" ] && options="$options --upgrade"
+    [ -n "$g_annotate" ] && options="$options --annotate"
 
     if [ -n "$PERL" ]; then
 	if [ ! -x "$PERL" ]; then
@@ -685,6 +687,14 @@ check_command() {
 			T*)
 			    g_confess=Yes
 			    option=${option#T}
+			    ;;
+			u*)
+			    g_upgrade=Yes
+			    option=${option#u}
+			    ;;
+			a*)
+			    g_annotate=Yes
+			    option=${option#a}
 			    ;;
 			*)
 			    usage 1
@@ -1531,6 +1541,8 @@ g_debug=
 g_export=
 g_refreshchains=:none:
 g_confess=
+g_upgrade=
+g_annotate=
 
 #
 # Make sure that these variables are cleared
