@@ -64,6 +64,10 @@
 
       <arg><option>-T</option></arg>
 
+      <arg><option>-u</option></arg>
+
+      <arg><option>-a</option></arg>
+
       <arg><replaceable>directory</replaceable></arg>
     </cmdsynopsis>
 
@@ -738,6 +742,19 @@
           <para>The <option>-T</option> option was added in Shorewall 4.4.20
           and causes a Perl stack trace to be included with each
           compiler-generated error and warning message.</para>
+
+          <para>The <option>-u</option> option was added in Shorewall 4.4.21
+          and causes the compiler to upgrade
+          <filename>/etc/shorewall/shorewall.conf</filename>. The upgrade will
+          add new options with their default values and will move deprecated
+          options with non-defaults to a deprecated options section at the
+          bottom of the file.Your existing <filename>shorewall.conf</filename>
+          file is renamed <filename>shorewall.conf.bak.</filename></para>
+
+          <para>The <option>-a</option> option was added in Shorewall 4.4.21
+          and is only meaningful when used with <option>-u</option>. It causes
+          the upgraded <filename>shorewall.conf</filename> file to be
+          annotated with documentation.</para>
         </listitem>
       </varlistentry>
 
