@@ -1,6 +1,6 @@
 Changes in Shorewall 4.4.21 Beta 2
 
-None.
+1)  Add -u option to check.
 
 Changes in Shorewall 4.4.21 Beta 1
 
