@@ -80,6 +80,16 @@ None.
 
 	DROP_DEFAULT=Drop(-,DROP)
 
+4)  The 'check' command now allows a '-u' (upgrade) option that
+    upgrades your /etc/shorewall[6]/shorewall[6].conf file. The
+    upgraded file will set any new options with their default values
+    and will move any deprecated options with non-default values to a
+    'deprecated options' section at the end of the file. Each such
+    deprecated option will generate a warning message.
+
+    Your original shorewall[6].conf file will be saved as
+    shorewall[6].conf.bak.
+ 
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
